--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,6 +6,6 @@ import MainLayout from "../layouts/MainLayout.astro";
 import "../styles/global.css";
 ---
 
-<MainLayout title="Home" description="The home page">
-	<p>hi from home</p>
+<MainLayout title="About" description="The about page">
+    <p>hi from about</p>
 </MainLayout>
