progress, about page and basic blog

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -15,7 +15,9 @@ const { title = "My Astro Blog", description = "A description" } =
     <MainHead {title} {description} />
     <body>
         <Nav />
-        <slot>Default Text</slot>
+        <main>
+            <slot>Default Text</slot>
+        </main>
         <Footer />
     </body>
 </html>
