--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
 // component imports
+import AstroLink from "../components/AstroLink.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 
 // stype import
@@ -7,5 +8,26 @@ import "../styles/global.css";
 ---
 
 <MainLayout title="About" description="The about page">
-    <p>hi from about</p>
+    <section class="container about" aria-label="About Me">
+        <img
+            src="/images/headshot.jpg"
+            alt="My headshot"
+            width="200"
+            height="330"
+        />
+        <div class="content">
+            <h1 class="h1">My Blog</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem
+                suscipit ipsa dolores mollitia sequi, tempora dolorem
+                consectetur pariatur autem rem? Hic vero explicabo aperiam
+                delectus rerum possimus, quasi saepe optio!
+            </p>
+            <AstroLink
+                href="mailto:hello.fiplan@gmail.com"
+                style="primary"
+                text="Contact Me"
+            />
+        </div>
+    </section>
 </MainLayout>
