blog post styling and blog page

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -7,6 +7,9 @@ import type { Props } from "../lib/shared/types/Props";
 import Footer from "../components/Footer.astro";
 import Nav from "../components/Nav.astro";
 
+// style import
+import "../styles/global.css";
+
 const { title = "My Astro Blog", description = "A description" } =
     Astro.props as Props;
 ---
