--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,7 +24,7 @@ import "../styles/global.css";
                 delectus rerum possimus, quasi saepe optio!
             </p>
             <AstroLink
-                href="mailto:hello.fiplan@gmail.com"
+                href="mailto:nickk.graham@hotmail.com"
                 style="primary"
                 text="Contact Me"
             />
