--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,44 @@
 ---
 // component imports
 import MainLayout from "../layouts/MainLayout.astro";
+import PostCard from "../components/PostCard.astro";
+import AstroLink from "../components/AstroLink.astro";
 
 // stype import
 import "../styles/global.css";
+
+import { formatBlogPosts } from "../lib/ts/utils";
+
+const allPosts = await Astro.glob("./blog/*.md");
+const formattedPosts = formatBlogPosts(allPosts, { limit: 3 });
 ---
 
 <MainLayout title="Home" description="The home page">
-	<p>hi from home</p>
+	<section class="container about" aria-label="About Me">
+		<img
+			src="../../public/headshot.jpg"
+			alt="My headshot"
+			width="200"
+			height="330"
+		/>
+		<div class="content">
+			<h1 class="h1">My Blog</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			<AstroLink href="/about/" style="secondary" text="👋 About Me" />
+		</div>
+	</section>
+	<section class="container" aria-label="New Blog Posts">
+		<h2 class="h1">New Blog Posts</h2>
+		<div class="post-container">
+			{
+				formattedPosts.map((post) => (
+					<PostCard
+						frontmatter={post.frontmatter}
+						url={post.url}
+						tagType="h3"
+					/>
+				))
+			}
+		</div>
+	</section>
 </MainLayout>
