fix headshot and add quicknav

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ import "../styles/global.css";
 <MainLayout title="About" description="The about page">
     <section class="container about" aria-label="About Me">
         <img
-            src="../../public/headshot.jpg"
+            src="../../headshot.jpg"
             alt="My headshot"
             width="200"
             height="330"
