--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const formattedPosts = formatBlogPosts(allPosts, { limit: 3 });
 <MainLayout title="Home" description="The home page">
 	<section class="container about" aria-label="About Me">
 		<img
-			src="../../public/headshot.jpg"
+			src="../../headshot.jpg"
 			alt="My headshot"
 			width="200"
 			height="330"
