--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -2,6 +2,7 @@
 // component imports
 import MainLayout from "./MainLayout.astro";
 import PostHeader from "../components/PostHeader.astro";
+import CategoryCloud from "../components/CategoryCloud.astro";
 
 const { frontmatter } = Astro.props;
 const { title, description, date, category, author, image } = frontmatter;
@@ -20,6 +21,11 @@ const { title, description, date, category, author, image } = frontmatter;
         <div class="content">
             <slot />
         </div>
-        <div class="sidebar"></div>
+        <div class="sidebar">
+            <aside class="container" aria-label="Blog categories">
+                <h2 class="h3">Blog Categories</h2>
+                <CategoryCloud />
+            </aside>
+        </div>
     </div>
 </MainLayout>
